[gd_scene load_steps=3 format=2]

[ext_resource path="res://settings/SettingsMenu.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[node name="SettingsMenu" type="PopupPanel"]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 180.0
margin_top = 30.0
margin_right = -180.0
margin_bottom = -60.0
mouse_filter = 2
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 587.0
margin_bottom = 437.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 582.0
margin_bottom = 14.0
text = "Settings"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 582.0
margin_bottom = 392.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 582.0
margin_bottom = 108.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Settings" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 582.0
custom_constants/separation = 20

[node name="LabelVolume" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 582.0
margin_bottom = 34.0
text = "Volume"
align = 1

[node name="Volumes" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 582.0
margin_bottom = 54.0
custom_constants/separation = 5

[node name="LabelBindings" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 582.0
margin_bottom = 88.0
text = "Key Bindings"
align = 1

[node name="Bindings" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 582.0
margin_bottom = 108.0
size_flags_horizontal = 3
custom_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 412.0
margin_right = 582.0
margin_bottom = 432.0
alignment = 1

[node name="Apply" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 215.0
margin_right = 263.0
margin_bottom = 20.0
text = "Apply"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 267.0
margin_right = 308.0
margin_bottom = 20.0
text = "Save"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 312.0
margin_right = 366.0
margin_bottom = 20.0
text = "Cancel"

[node name="RebindingMessage" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -30.0
margin_right = 70.0
margin_bottom = 30.0
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press New Key
(esc to cancel)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Apply" to="." method="_on_apply"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Save" to="." method="_on_save"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel"]
